[package]
name = "graph-chain-near"
version = "0.22.0"
edition = "2018"

[dependencies]
# You need to have cmake installed
actix = "=0.11.0-beta.2"
actix-web = "=4.0.0-beta.6"
actix-http = "=3.0.0-beta.6"
actix-tls = "=3.0.0-beta.5"
actix_derive = "=0.6.0-beta.1"
graph = { path = "../../graph" }
openssl-probe = { version = "0.1.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.26"
tracing-subscriber = "0.2.4"

"serde_path_to_error" = "*"

near-indexer = { git = "https://github.com/near/nearcore", rev="7e24d5d758be41ff12528964ebdcad12e32b990d" }
near-chain-configs  = { git = "https://github.com/near/nearcore", rev="7e24d5d758be41ff12528964ebdcad12e32b990d" }
